    receiving graphics commands.
  - X11 platform: Added support for drawing text with the pango library
    which allows to draw most scripts supported by Unicode, including CJK
    and right-to-left scripts. The corresponding CMake option is
    OPTION_USE_PANGO. The corresponding configure option is --enable-pango.
    This option is OFF by default.

  New Configuration Options (ABI Version)

  - FLTK's ABI version can be configured with 'configure' and CMake.
    See documentation in README.abi-version.txt.


  1.4.0 ABI FEATURES

  - None. FLTK 1.4.0 has a new ABI, breaking 1.3.x ABI.


  Other Improvements

  - (add new items here)
  - Separated Fl_Spinner.H and Fl_Spinner.cxx (STR #2776).
  - New method Fl_Spinner::wrap(int) allows to set wrap mode at bounds if
    value is changed by pressing or holding one of the buttons (STR #3365).
  - Fl_Spinner now handles Up and Down keys when the input field has
    keyboard focus (STR #2989).
  - Renamed test/help.cxx demo program to test/help_dialog.cxx to avoid
    name conflict with CMake auto-generated target 'help'.
  - Many documentation fixes, clarifications, and enhancements.


  Bug Fixes

  - (add new items here)
  - Fix Fl_Tabs label drawing for Fl_Window children (STR #3075).
  - Fix line number alignment in Fl_Text_Display/Editor (STR #3363).
  - Fix ignored buffer pre-allocation (requestedSize) in Fl_Text_Buffer.
    See fltk.general "Fl_Text_Buffer constructor bug" on Dec 5, 2016.
  - Fix build with configure --enable-cairo --enable-cairoext,
    see this report in fltk.general:
    https://groups.google.com/forum/#!topic/fltkgeneral/x80qQ6wt0s4


  Removed Features

  - Bundled IDE project files (Xcode and Visual Studio) have been
    removed. Please use CMake to generate your IDE project files.
    See README.CMake.txt for more information.


Changes in FLTK 1.3

  See CHANGES_1.3


Changes in FLTK 1.1

  See CHANGES_1.1


Changes in FLTK 1.0

  See CHANGES_1.0