@@ -45,6 +45,7 @@ Changes in FLTK 1.4.0					Released: ??? ?? 2017
   Other Improvements
 
   - (add new items here)
+  - Separated Fl_Input_Choice.H and Fl_Input_Choice.cxx (STR #2750, #2752).
   - Separated Fl_Spinner.H and Fl_Spinner.cxx (STR #2776).
   - New method Fl_Spinner::wrap(int) allows to set wrap mode at bounds if
     value is changed by pressing or holding one of the buttons (STR #3365).
